--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@ I enjoy combining design and code to build clean, working systems that are usefu
         </div>
     </div>
 
-    <!-- <div class="contact" id="contact">
+    <div class="contact" id="contact">
         <h5>Contact me</h5>
         <h3>Let's Work Together</h3>
         <section class="contact-form">
-    <form action="https://formsubmit.co/milindanawarathne20020130@gmail.com" method="POST" class="form">
-
+<form action="contact.php" method="POST" class="form">
         
               <div class="input-wrapper">
                 <input
@@ -191,7 +190,7 @@ I enjoy combining design and code to build clean, working systems that are usefu
                 <i class='bx bx-send'></i>
                 <span>Send Message</span>
               </button>
-            </form> -->
+            </form>
         </section>
   <div class="social-fixed-icons">
   <a href="https://wa.me/94764337221" target="_blank" title="Contact us on WhatsApp" class="whatsapp">
