--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
     <title>Milinda Nawarathne</title>
-    <link rel="stylesheet" href="/asset/css/style.css" />
+    <link rel="stylesheet" href="./asset/css/style.css" />
 </head>
 
 <body>
