--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <h3>I build <span>full-stack solutions</span> and web apps</h3>
             <p>Passionate full-stack developer focused on building practical and user-friendly web solutions. I turn ideas into reality through clean code, strong problem-solving, and continuous learning.
             </p>
-            <button>Get In Touch</button>
+           <a href="MilindaCV2 (2) (1).pdf" download>
+  <button class="download-btn">Download CV</button>
+</a>
         </div>
         <div class="right">
             <img src="asset/images/my-photo.jpeg" alt="Milinda Nawarathne">
@@ -82,7 +84,7 @@
                 <div class="timeline-text">
                     <div class="timeline-icon"><i class='bx bx-university'></i></div>
                     <h2>Kingston University London</h2>
-                    <h4>2024 – Present</h4>
+                    <h4>2025 – Present</h4>
                     <p>
                         Pursuing BSc (Hons) in Computer Science (Software Engineering), focusing on full-stack development, modern frameworks, and scalable application design.
                     </p>
@@ -120,35 +122,38 @@ I enjoy combining design and code to build clean, working systems that are usefu
 
         <div class="portfo-items">
             <div class="item">
-                <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=400&h=250&fit=crop" alt="Portfolio Project">
-                <div class="info">
-                    <h4>E-Commerce Platform</h4>
-                    <p>
-                        Modern e-commerce solution with seamless user experience, advanced filtering, and secure payment integration.
-                    </p>
-                    <a href="#">View Project <i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&h=250&fit=crop" alt="Dashboard Design">
-                <div class="info">
-                    <h4>Analytics Dashboard</h4>
-                    <p>
-                        Comprehensive dashboard design with real-time data visualization and intuitive user interface for business insights.
-                    </p>
-                    <a href="#">View Project <i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=400&h=250&fit=crop" alt="Mobile App">
-                <div class="info">
-                    <h4>Mobile App Design</h4>
-                    <p>
-                        User-centered mobile application with clean interface design and smooth interaction patterns for enhanced engagement.
-                    </p>
-                    <a href="#">View Project <i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
+    <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=400&h=250&fit=crop" alt="GreenDine Project">
+    <div class="info">
+        <h4>GreenDine - Food Waste Management</h4>
+        <p>
+            Full-stack solution for managing food waste efficiently, featuring real-time tracking and eco-friendly disposal methods.
+        </p>
+        <a href="https://github.com/Milinda0130/GreenDine" target="_blank">View Project <i class='bx bx-link-external'></i></a>
+    </div>
+</div>
+
+<div class="item">
+    <img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?w=400&h=250&fit=crop" alt="Movie Booking System">
+    <div class="info">
+        <h4>Movie Booking System</h4>
+        <p>
+            Interactive seat booking system with user-friendly interface, enabling online reservations and real-time seat availability.
+        </p>
+        <a href="https://github.com/Milinda0130/MovieBookingSystem" target="_blank">View Project <i class='bx bx-link-external'></i></a>
+    </div>
+</div>
+
+<div class="item">
+    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=400&h=250&fit=crop" alt="Smart Campus Management System">
+    <div class="info">
+        <h4>Smart Campus Management System</h4>
+        <p>
+            MERN stack platform enhancing campus operations with event management, resource booking, and interactive dashboards.
+        </p>
+        <a href="https://github.com/Milinda0130/SmartCampusManagement" target="_blank">View Project <i class='bx bx-link-external'></i></a>
+    </div>
+</div>
+
         </div>
     </div>
 
