--- a/index.html
+++ b/index.html
@@ -265,6 +265,6 @@ I enjoy combining design and code to build clean, working systems that are usefu
             </div>
         </div>
     </footer>
-
+<script src="asset/js/app.js"></script>
 </body>
 </html>
